dba34d: remove unnescessary casts