@@ -109,7 +109,7 @@ public abstract class WizardDialog extends UnoDialog2 implements VetoableChangeL
     {
         try
         {
-            XTopWindow top = (XTopWindow) UnoRuntime.queryInterface(XTopWindow.class, xWindow);
+            XTopWindow top = UnoRuntime.queryInterface(XTopWindow.class, xWindow);
             if (top != null)
             {
                 top.toFront();
@@ -178,12 +178,12 @@ public abstract class WizardDialog extends UnoDialog2 implements VetoableChangeL
 
     public void setRoadmapInteractive(boolean _bInteractive)
     {
-        Helper.setUnoPropertyValue(oRoadmap, "Activated", new Boolean(_bInteractive));
+        Helper.setUnoPropertyValue(oRoadmap, "Activated", Boolean.valueOf(_bInteractive));
     }
 
     public void setRoadmapComplete(boolean bComplete)
     {
-        Helper.setUnoPropertyValue(oRoadmap, "Complete", new Boolean(bComplete));
+        Helper.setUnoPropertyValue(oRoadmap, "Complete", Boolean.valueOf(bComplete));
     }
 
     public boolean isRoadmapComplete()
@@ -254,18 +254,18 @@ public abstract class WizardDialog extends UnoDialog2 implements VetoableChangeL
                         Boolean.TRUE,
                         85
                     });
-            XPropertySet xPSet = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, oRoadmap);
+            XPropertySet xPSet = UnoRuntime.queryInterface(XPropertySet.class, oRoadmap);
             xPSet.setPropertyValue(PropertyNames.PROPERTY_NAME, "rdmNavi");
 
-            xSSFRoadmap = (XSingleServiceFactory) UnoRuntime.queryInterface(XSingleServiceFactory.class, oRoadmap);
-            xIndexContRoadmap = (XIndexContainer) UnoRuntime.queryInterface(XIndexContainer.class, oRoadmap);
+            xSSFRoadmap = UnoRuntime.queryInterface(XSingleServiceFactory.class, oRoadmap);
+            xIndexContRoadmap = UnoRuntime.queryInterface(XIndexContainer.class, oRoadmap);
             //    XPropertySet xPropRoadmapModel = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, oRoadmap);
             //    xPropRoadmapModel.addPropertyChangeListener("CurrentItemID", new WizardDialog.RoadmapItemListener(this.xDialogModel));
 
             MethodInvocation mi = new MethodInvocation("itemStateChanged", this, com.sun.star.awt.ItemEvent.class);
             getGuiEventListener().add("rdmNavi", EventNames.EVENT_ITEM_CHANGED, mi);
             xRoadmapControl = this.xDlgContainer.getControl("rdmNavi");
-            xRoadmapBroadcaster = (XItemEventBroadcaster) UnoRuntime.queryInterface(XItemEventBroadcaster.class, xRoadmapControl);
+            xRoadmapBroadcaster = UnoRuntime.queryInterface(XItemEventBroadcaster.class, xRoadmapControl);
             xRoadmapBroadcaster.addItemListener((XItemListener) getGuiEventListener());
 
             //     xRoadmapControl = this.xDlgContainer.getControl("rdmNavi");
@@ -310,11 +310,10 @@ public abstract class WizardDialog extends UnoDialog2 implements VetoableChangeL
         {
             Object oRoadmapItem = xSSFRoadmap.createInstance();
             Helper.setUnoPropertyValue(oRoadmapItem, PropertyNames.PROPERTY_LABEL, _sLabel);
-            Helper.setUnoPropertyValue(oRoadmapItem, PropertyNames.PROPERTY_ENABLED, new Boolean(_bEnabled));
+            Helper.setUnoPropertyValue(oRoadmapItem, PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(_bEnabled));
             Helper.setUnoPropertyValue(oRoadmapItem, "ID", new Integer(_CurItemID));
             xIndexContRoadmap.insertByIndex(Index, oRoadmapItem);
-            int NextIndex = Index + 1;
-            return NextIndex;
+            return Index + 1;
         }
         catch (com.sun.star.uno.Exception exception)
         {
@@ -588,7 +587,7 @@ public abstract class WizardDialog extends UnoDialog2 implements VetoableChangeL
         XInterface xRoadmapItem = getRoadmapItemByID(_nStep);
         if (xRoadmapItem != null)
         {
-            Helper.setUnoPropertyValue(xRoadmapItem, PropertyNames.PROPERTY_ENABLED, new Boolean(bEnabled));
+            Helper.setUnoPropertyValue(xRoadmapItem, PropertyNames.PROPERTY_ENABLED, Boolean.valueOf(bEnabled));
         }
     }
 
